# RustyReaderBot

./: .gitignore  Cargo.toml  README.md
files/: list.json  logs.txt
src/: commands.rs  logs.rs  main.rs  readlist.rs  rss.rs
